# scalable-ml-inference-platform

./: .dockerignore  .env.example  .gitignore  docker-compose.override.yml  docker-compose.yml  locustfile.py
auth-service/: Dockerfile  requirements.txt
auth-service/app/: main.py
auth-service/app/routers/: auth.py
auth-service/app/services/: auth_service.py
inference-studio/: index.html  package-lock.json  package.json  tailwind.config.js
inference-studio/src/: App.tsx  Auth.tsx  AuthContext.tsx  Canvas.tsx  GlobalBackground.tsx  History.tsx  PageTransition.tsx  Profile.tsx  Pulse.tsx  Studio.tsx  api.ts
migrations/: Dockerfile  alembic.ini  env.py  requirements.txt
migrations/versions/: 001_initial_schema.py
ml_platform_core/: pyproject.toml
ml_platform_core/ml_platform_core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
ml_platform_core/ml_platform_core/models/: __init__.py  ml_model.py  prediction.py  user.py  user_analytics.py
ml_platform_core/ml_platform_core/schemas/: __init__.py  auth.py  model.py  prediction.py
model-service/: Dockerfile  requirements.txt
model-service/app/: main.py
model-service/app/routers/: models.py
model-service/app/services/: model_service.py  training.py
nginx/: Dockerfile  nginx.conf
prediction-service/: Dockerfile  requirements.txt
prediction-service/app/: main.py
prediction-service/app/core/: cache_instance.py  model_cache.py  redis_client.py  sync_worker.py
prediction-service/app/routers/: predictions.py
prometheus/: Dockerfile  prometheus.yml
(+1 files in other folders)
